--- a/project/chat_forum_more_project/web/static_resource/css/pub/mobile/page/forum.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/mobile/page/forum.css
@@ -45,10 +45,27 @@
     min-height: 1rem;
     background: var(--f_grandson_b_bk);
 }
+.f_grandson_b img{
+    max-width: 100%;
+}
 .f_grandson_f{
     height: 3.6rem;
+    line-height: 1.8rem;
     background: var(--f_grandson_f_bk);
+    text-align: center;
 }/*cwa*/
+/*aaa*/.f_grandson_f ul, .f_grandson_f li{
+    height: 100%;
+}
+.f_grandson_f li{
+    float: left;
+    overflow: hidden;
+}
+.f_grandson_f li span{
+    display: block;
+    width: 100%;
+    height: 50%;
+}/*aaa*/
 /*cwu*/.f_grandson_f li:nth-last-child(1):first-child,
 .f_grandson_f li:nth-last-child(1):first-child~li{
     width: 100%;
