--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -21,6 +21,10 @@
     --pub_head_bk: #96ff71;
     --forum_head_c_act_bk: #ff5356;
     --forum_sons_bk: #fff576;/*dnl*/
+    /*aaa*/--one_announcement_bk: #6e60ff;
+    --one_announcement_h_bk: #ffdba3;
+    --one_announcement_b_bk: #b4ffb3;
+    --one_announcement_f_bk: #ff668d;/*aaa*/
     /*hon*/--forum_grandson_bk: #ff666e;
     --f_grandson_h_bk: #aefdff;
     --f_grandson_b_bk: #bdffbf;
