--- a/project/chat_forum_more_project/web/static_resource/css/pub/mobile/page/forum.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/mobile/page/forum.css
@@ -1,4 +1,5 @@
 /*cwj*/#b_forum{
+    height: 100%;
     background: var(--b_forum_bk);
 }
 .forum_sons{
@@ -33,7 +34,34 @@
     top: var(--pub_head_h);
     left: 0px;
 }/*cwj*/
+/*nnn*/.one_announcement{
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+    background: var(--one_announcement_bk);
+}
+.one_announcement_h{
+    width: 100%;
+    height: 1.6rem;
+    overflow: hidden;
+    line-height: 1.6rem;
+    background: var(--one_announcement_h_bk);
+}
+.one_announcement_b{
+    width: 100%;
+    min-height: 4.8rem;
+    overflow: hidden;
+    line-height: 1.6rem;
+    background: var(--one_announcement_b_bk);
+}
+.one_announcement_f{
+    width: 100%;
+    overflow: hidden;
+    height: 1.6rem;
+    line-height: 1.6rem;
+    background: var(--one_announcement_f_bk);
+}/*nnn*/
 /*cwa*/.f_grandson{
+    width: 100%;
     margin-bottom: 0.5rem;
     background: var(--forum_grandson_bk);
 }
@@ -42,7 +70,8 @@
     background: var(--f_grandson_h_bk);
 }
 .f_grandson_b{
-    min-height: 1rem;
+    min-height: 5rem;
+    line-height: 1.5rem;
     background: var(--f_grandson_b_bk);
 }
 .f_grandson_b img{
