--- a/project/chat_forum_more_project/web/static_resource/css/pub/mobile/variable/size.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/mobile/variable/size.css
@@ -15,7 +15,7 @@
     --notice_head_font_size: 1.2rem;
     --notice_foot_h: 3rem;
     --notice_foot_font_size: 1.2rem;
-    --notice_body_padd: 0.5rem;
+    /*--notice_body_padd: 0.5rem;*/
     --notice_body_padd_left_right: 1rem;
     --notice_body_line_h: 1.5rem;
 }/*erf*/
