静态资源请求添加验证字符串

--- a/project/chat_forum_more_project/web/static_resource/css/pub/mobile/page/forum.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/mobile/page/forum.css
@@ -27,6 +27,7 @@
     margin-left: 1rem;
 }
 .forum_head_c_act{
+    font-size: 1.3rem;
     background: var(--forum_head_c_act_bk);
 }
 #b_forum_body{
