--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -28,5 +28,9 @@
     /*hon*/--forum_grandson_bk: #ff666e;
     --f_grandson_h_bk: #aefdff;
     --f_grandson_b_bk: #bdffbf;
-    --f_grandson_f_bk: #cc71ff;
-}/*hon*/
+    --f_grandson_f_bk: #cc71ff;/*hon*/
+    /*bbb*/--show_one_announcement_bk: #ff5c6d;
+    --show_one_announcement_t_bk: #94ffa5;
+    --show_one_announcement_i_bk: #9eafff;
+    --show_one_announcement_close_bk: #ffef92;
+}/*bbb*/
