优化，优化鼠标滑动滚动

--- a/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
+++ b/project/chat_forum_more_project/web/static_resource/css/personalized/color/1.css
@@ -18,6 +18,7 @@
     --notice_foot_bk: green;
     --notice_body_bk: #92f7ff;
     --b_forum_bk: #ffab4a;
+    --b_forum_body_bk: #8782ff;
     --pub_head_bk: #96ff71;
     --forum_head_c_act_bk: #ff5356;
     --forum_sons_bk: #fff576;/*dnl*/
