--- a/project/chat_forum_more_project/web/static_resource/css/pub/mobile/variable/size.css
+++ b/project/chat_forum_more_project/web/static_resource/css/pub/mobile/variable/size.css
@@ -1,6 +1,35 @@
 /*erf*/:root{
-    --pub_head_h: 3rem;
+    --forum_head_h: 3rem;
+    --forum_head_h_shorter_0: var(--forum_head_h);
+    --forum_head_h_shorter_1: 2rem;
+    --forum_head_h_shorter_2: 1rem;
+    --forum_head_h_shorter_3: 0px;
+    --forum_head_h_heighten_0: 0px;
+    --forum_head_h_heighten_1: 1rem;
+    --forum_head_h_heighten_2: 2rem;
+    --forum_head_h_heighten_3: var(--forum_head_h);
     --pub_foot_h: 3rem;
+    --pub_foot_h_shorter_0: var(--pub_foot_h);
+    --pub_foot_h_shorter_1: 2rem;
+    --pub_foot_h_shorter_2: 1rem;
+    --pub_foot_h_shorter_3: 0px;
+    --pub_foot_h_heighten_0: 0px;
+    --pub_foot_h_heighten_1: 1rem;
+    --pub_foot_h_heighten_2: 2rem;
+    --pub_foot_h_heighten_3: var(--pub_foot_h);
+    --forum_body_h: calc(100% - var(--forum_head_h));
+    --forum_body_h_1: calc(var(--forum_body_h) + 6rem);
+    --forum_body_h_2: calc(var(--forum_body_h) + 4rem);
+    --forum_body_h_3: calc(var(--forum_body_h) + 2rem);
+    --forum_body_h_4: var(--forum_body_h);
+    --forum_body_h_shorter_0: var(--forum_body_h_1);
+    --forum_body_h_shorter_1: var(--forum_body_h_2);
+    --forum_body_h_shorter_2: var(--forum_body_h_3);
+    --forum_body_h_shorter_3: var(--forum_body_h_4);
+    --forum_body_h_heighten_0: var(--forum_body_h_4);
+    --forum_body_h_heighten_1: var(--forum_body_h_3);
+    --forum_body_h_heighten_2: var(--forum_body_h_2);
+    --forum_body_h_heighten_3: var(--forum_body_h_1);
     --one_head_h: 3rem;
     --two_head_h: 2rem;
     --three_head_h: 2rem;
